Committing changes after completing section5